# TimeSpent

./: Cargo.toml  LICENSE  README.md  build.rs  installer.iss
src/: config.rs  globals.rs  shared.rs  tracker.rs
src/daemon/: daemon.rs  platform.rs  write.rs
src/gui/: context_menu.rs  gui.rs  table.rs  utils.rs  windows.rs
src/gui/windows/: delete_window.rs  rename_window.rs  status_window.rs
