[package]
name = "time-spent"
version = "0.1.2"
edition = "2021"
build = "build.rs"
authors = ["SlackedLime <slackedlime@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "daemon"
path = "src/daemon/daemon.rs"

[[bin]]
name = "gui"
path = "src/gui/gui.rs"

[profile.release]
lto = true

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
serde_json = "1.0.85"
dirs = "4.0.0"
chrono = "0.4.22"
image = "0.24.4"
sysinfo = "0.26.1"
egui_extras = "0.33.3"
egui_plot = "0.34.1"
eframe = "0.33.3"