[package]
name = "timespent"
version = "0.1.2"
edition = "2021"
build = "build.rs"
authors = ["Sourav <contact@sourv.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "daemon"
path = "src/daemon/daemon.rs"

[[bin]]
name = "gui"
path = "src/gui/gui.rs"

[profile.release]
lto = true

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[target.'cfg(target_os = "linux")'.dependencies]
xcb = "1.2.1"
kdotool = "0.2.2"

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.0"
dirs = "4.0.0"
chrono = "0.4.22"
image = "0.24.4"
sysinfo = {  version = "0.26.1", default-features = false }
egui_extras = "0.33.3"
egui_plot = "0.34.1"
eframe = "0.33.3"
sled = { version = "0.34.7", features = ["compression"] }
nucleo-matcher = "0.3.1"